# remote-rs

./: Cargo.toml  README.md  build.rs  remote-rs.code-workspace
documentation/: advanced_controls_research.md  architecture.md  development_guide.md  optimization_and_features.md  remote_terminal.md  research_album_art.md  research_audio_system.md  ui_refactor_plan.md  youtube_flow.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src/lib/: AppLauncher.svelte  MediaControl.svelte  MiniPlayer.svelte  MusicQueuePanel.svelte  NowPlayingCard.svelte  PageHeader.svelte  PageTabs.svelte
frontend/src/lib/api/: backend.ts
frontend/src/lib/data/: launcher.ts  pages.ts
frontend/src/lib/pages/: ControlsPage.svelte  HomePage.svelte  PlayerPage.svelte  SystemPage.svelte
frontend/src/lib/stores/: media.ts  router.ts
src/: main.rs
src/modules/: mod.rs  native.rs
src/modules/launcher/: mod.rs  youtube.rs
src/modules/media/: controls.rs  metadata.rs
src/modules/system/: lock.rs  mod.rs  power.rs
src/modules/terminal/: mod.rs
src/modules/volume/: mod.rs
src/native/: windows_shim.cpp  windows_shim.h
