[package]
name = "remote-rs"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc = "1.0"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors"] }
enigo = "0.3"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Power",
    "Win32_System_Shutdown",
    "Win32_UI_WindowsAndMessaging",
    "Media_Control",
    "Media",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
] }
windows-future = "0.3.2"
base64 = "0.22.1"
reqwest = { version = "0.13.4", features = ["json"] }
portable-pty = "0.9.0"
